<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".CaddisflyReader" >

        <TextView
            android:id="@+id/device_id_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_id" />

        <EditText
            android:id="@+id/device_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/device_id_lbl"
            android:ems="10" >
        </EditText>

        <TextView
            android:id="@+id/test_id_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/device_id"
            android:text="@string/test_id" />

        <EditText
            android:id="@+id/test_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/device_id"
            android:layout_below="@+id/test_id_lbl"
            android:ems="10" />

        <TextView
            android:id="@+id/test_location_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/test_id"
            android:text="@string/test_location" />

        <EditText
            android:id="@+id/test_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/test_id"
            android:layout_below="@+id/test_location_lbl"
            android:ems="10" />
        
        <TextView
            android:id="@+id/source_type_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/test_location"
            android:text="@string/source_type" />

        <Spinner
            android:id="@+id/source_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/source_type_lbl"
            android:entries="@array/source_types"
            android:ems="10" />

        <TextView
            android:id="@+id/test_type_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/source_type"
            android:text="@string/test_type" />

        <EditText
            android:id="@+id/test_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/test_type_lbl"
            android:ems="10" />

        <TextView
            android:id="@+id/test_time_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/test_type"
            android:text="@string/test_time" />

        <EditText
            android:id="@+id/test_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/test_time_lbl"
            android:ems="10" />

        <TextView
            android:id="@+id/test_result_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/test_time"
            android:text="@string/test_result" />

        <EditText
            android:id="@+id/test_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/test_result_lbl"
            android:ems="10" />

        <TextView
            android:id="@+id/location_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/test_result"
            android:text="@string/location" />

        <EditText
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_lbl"
            android:ems="10" />

        <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/submit"
            android:ems="5"
            android:text="@string/connect" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/location"
            android:layout_below="@+id/location"
            android:layout_marginTop="15dp"
            android:text="@string/submit" />
    </RelativeLayout>

</ScrollView>